--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <div id="app"></div>
     <!-- this may break with vue-cli.  
     It's a hold over from initializing with webpack in PlayJS -->
-    <script src="main.js" type="text/javascript"></script>
+    <!--<script src="main.js" type="text/javascript"></script> -->
     <!-- built files will be auto injected -->
   </body>
 </html>
